# projekt-wdrozeniowy-prototyp

./: .gitignore  .pre-commit-config.yaml  README.md  generator.md  pyproject.toml  svm.joblib
.github/workflows/: formatting.yml  test.yml  tests_coverage.yml
docs/source/: conf.py  generator.rst  index.rst  preprocessor.rst  source.rst
projekt_wdrozeniowy_prototyp/: interface.py
projekt_wdrozeniowy_prototyp/sound_generator/: __init__.py  preprocessor.py  sound_generator.py  source.py
tests/: test_generator.py  test_generator_preprocessor.py  test_generator_source.py  test_projekt_wdrozeniowy_prototyp.py
