[tool.poetry]
name = "projekt-wdrozeniowy-prototyp"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakubciszek64@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.4"
librosa = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
ipykernel = "^6.4.1"
pytest-cov = "^3.0.0"
seaborn = "^0.11.2"
Sphinx = "^4.4.0"
sphinx-book-theme = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = ['@abstractmethod']
